--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 macroquad = "0.4.13"
 # Small addon to make collision detection and level worlds possible
 macroquad-platformer = "0.2.0"
+# Serilization and Deserilization
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
+# Get Platform directories (for cross-platform support)
+dirs = "5.0.1"
