--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "JumboMumbo"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
@@ -15,3 +15,11 @@ serde_json = "1.0.133"
 dirs = "5.0.1"
 # Measure execution time of code
 stopwatch2 = "2.0.0"
+
+[package.metadata.bundle]
+name = "JumboMumbo"
+identifier = "com.rajalastudios.rajala1404.jumbomumbo"
+version = "1.0.0"
+resources = [ "res" ]
+category = "Game"
+short-description = "Computer Sience exam game"
